feat: add database export functionality with JSON and CSV support

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
                 document.head.appendChild(script);
             })();
         </script>
+        <!-- Add JSZip for ZIP file creation - CDN -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     </head>
     <body>
         <div class="app-container">
