ready to deploy

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -11,9 +11,15 @@
         <div class="toolbar">
             <div class="toolbar-section">
                 <label for="db-file-input" class="file-input-label">
-                    📁 Load Database File
+                    📁 Load Database (.db)
                 </label>
                 <input type="file" id="db-file-input" accept=".db" style="display: none;">
+            </div>
+            <div class="toolbar-section">
+                <label for="json-file-input" class="file-input-label">
+                    📄 Load JSON Export
+                </label>
+                <input type="file" id="json-file-input" accept=".json" style="display: none;">
             </div>
             <div class="toolbar-section">
                 <span id="status-text">Ready to load database</span>
