add Node Connections Dialog Module

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
         </script>
 
         <!-- Load UI functions -->
-        <script src="ui-functions.js"></script>
+        <script type="module" src="ui-functions.js"></script>
 
         <!-- Main Application -->
         <script type="module" src="graph.js"></script>
