add sample json for web-app

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -22,6 +22,9 @@
                 <input type="file" id="json-file-input" accept=".json" style="display: none;">
             </div>
             <div class="toolbar-section">
+                <button id="load-sample-btn" class="tool-btn">✨ Load Sample Graph</button>
+            </div>
+            <div class="toolbar-section">
                 <span id="status-text">Ready to load database</span>
             </div>
             <div class="toolbar-section">
