feat: add i18n support for Chinese users with language switching in settings
- Add i18n manager for handling translations and language switching
- Add English and Chinese translation files with comprehensive UI coverage
- Add Language tab to Settings dialog for language selection
- Add translation attributes to toolbar, sidebar, and dialog elements
- Add language preference persistence in localStorage
- Add automatic page translation on language change
- Support parameter interpolation and pluralization in translations

Closes: i18n feature request

--- a/public/index.html
+++ b/public/index.html
@@ -47,13 +47,13 @@
         <!-- Fullscreen exit button -->
         <button id="fullscreen-exit-btn" class="fullscreen-exit-btn">
             <i data-lucide="minimize-2" class="icon"></i>
-            Exit Fullscreen
+            <span data-i18n="common.exitFullscreen">Exit Fullscreen</span>
         </button>
 
         <!-- Selection info popup -->
         <div id="selection-info-popup" class="selection-info-popup">
             <div class="selection-info-popup-header">
-                <h3>Node Details</h3>
+                <h3 data-i18n="common.nodeDetails">Node Details</h3>
                 <button
                     class="selection-info-popup-close"
                     id="selection-info-popup-close"
@@ -65,7 +65,7 @@
                 class="selection-info-popup-content"
                 id="selection-info-popup-content"
             >
-                <p>Nothing selected</p>
+                <p data-i18n="common.nothingSelected">Nothing selected</p>
             </div>
         </div>
 
