feat: replace blocking operations with toast system to fix Electron Windows focus bug
- Add toast notification system (showToast) with support for success/error/warning/info types
- Add custom confirmation dialog system (showConfirmDialog) with promise-based API
- Replace all 20 alert() calls with showToast() to prevent Windows focus bugs
- Replace all 6 confirm() calls with showConfirmDialog() to prevent Windows focus bugs
- Add comprehensive CSS styles for toast notifications and confirmation dialogs
- Expose functions globally for backward compatibility
- Add documentation: TOAST_NOTIFICATIONS_GUIDE.md, SYNCHRONOUS_BLOCKING_ISSUES_REPORT.md

BREAKING CHANGE: None - all changes are backward compatible

Fixes critical Electron Windows focus bug where synchronous blocking operations
(alert/confirm) would cause the window to lose focus and become unresponsive.

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
             <span data-i18n="common.exitFullscreen">Exit Fullscreen</span>
         </button>
 
+        <!-- Toast notification container -->
+        <div id="toastContainer" class="toast-container"></div>
+
         <!-- Selection info popup -->
         <div id="selection-info-popup" class="selection-info-popup">
             <div class="selection-info-popup-header">
