--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Manual Graph Drawing App</title>
+        <!-- Preconnect to Google Fonts for better performance -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link rel="stylesheet" href="styles.css" />
         <!-- Add Lucide Icons - Local first, CDN fallback -->
         <script>
